--- a/project5/editorial.html
+++ b/project5/editorial.html
@@ -32,7 +32,18 @@
         </nav>
 
         <div class="editorial">
-        <div class="mashed"><a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" width="200" height="50"></a>
+            <table>
+                <tr>
+                    <td style="width: 33%; text-align: center;"><a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" width="200" height="50"></a></td>
+                    <td style="width: 33%; text-align: center;"><a href="https://www.mashed.com"></a><img src="../project/pictures/mashed.png" alt ="mashed" width="150" height="50"></a></td>
+                    <td style="width: 33%; text-align: center;"><a href="https://www.theodysseyonline.com/user/@taylor_huang"><img src="../project/pictures/odyssey.png" alt ="odyssey" width="150" height="150"></a></td>
+                </tr>
+                <tr>
+                    <td><p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p></td>
+                    <td><p>I was previously an intern for Her Campus Media, where I worked extensively on Lifestyle and Wellness articles. I also led the publications “Behind the Feed” series for a period, where I organized social media influencers stories.</p></td>
+                    <td><p>During the summer of 2020, I was a Lifestyle Beat Creator for the Odyssey Online. I worked closely with the Lifestyle Editor to create engaging, informative written content for audiences. At the end of this program, I generated upwards of 220,000 views on my content, which consisted of product reviews, listicles, and food items.</p></td>
+                </tr>
+        <!-- <div class="mashed"><a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" width="200" height="50"></a>
             <div class="text1">
                 <p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p><br>
         </div></div>
@@ -46,8 +57,10 @@
             <div class="text2">
                 <p>During the summer of 2020, I was a Lifestyle Beat Creator for the Odyssey Online. I worked closely with the Lifestyle Editor to create engaging, informative written content for audiences. At the end of this program, I generated upwards of 220,000 views on my content, which consisted of product reviews, listicles, and food items.</p><br>
 
-        </div></div>
+        </div></div>            -->
+        </table>
         </div>
+
 
         <footer>
             <div class="footer">
