--- a/project5/technical.html
+++ b/project5/technical.html
@@ -48,7 +48,7 @@
     </table>
 
     <table>
-    <tr><td style="width: 20%; text-align: center"><img src="../project/pictures/genwealthbuilders.png" alt ="genwealthbuilders width="250" height="250"></td>
+    <tr><td style="width: 20%; text-align: center"><img src="../project/pictures/genwealthbuilders.png" alt ="genwealthbuilders" width="250" height="250"></td>
     <td style="width: 80%"><h1>Lindley Consulting Group LLC Digital Marketing Internship</h1><br>
     <p>The summer of 2021, I worked as a digital marketing intern for Lindley Consulting Group, LLC. Over the course of six weeks, I assisted creating graphics and growing the organization’s social media presence. I also helped in the early stages of a project called Gen Wealth Builders, which aims to provide financial literacy and professional development tools to women of color. I documented project milestones via Lucidchart and sketched website and app mockups using Figma.</p><br>
     </td></tr>
