--- a/project5/editorial.html
+++ b/project5/editorial.html
@@ -35,7 +35,7 @@
             <table>
                 <tr>
                     <td style="width: 33%; text-align: center;"><a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" width="200" height="50"></a></td>
-                    <td style="width: 33%; text-align: center;"><a href="https://www.mashed.com"><img src="../project/pictures/mashed.png" alt ="mashed" width="150" height="50"></a></td>
+                    <td style="width: 33%; text-align: center;"><a href="https://www.hercampus.com/author/taylor-huang/"><img src="../project/pictures/hercampusmedia.png" alt ="hercampus" width="500" height="250"></a></td>
                     <td style="width: 33%; text-align: center;"><a href="https://www.theodysseyonline.com/user/@taylor_huang"><img src="../project/pictures/odyssey.png" alt ="odyssey" width="150" height="150"></a></td>
                 </tr>
                 <tr>
