--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-            body {background-color: #999999;}
+            body {background-color: #00cc00;}
             img {width: 150px;}
            /* footer colors background is #000e54, text is #c9cbd0 */
            .row1, .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 20px; margin: 20px;}
