--- a/project6/technical.html
+++ b/project6/technical.html
@@ -10,7 +10,7 @@
         .heading1 {display: flex; text-align: left;}
         .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
         .letsconnect{float: left; margin: 150px}
-        .contact{float: center; margin: 150px}
+        .contact{margin: 150px}
         .social-links{float: right; margin: 150px}
         .banner{max-width: 100%}
         .twitter{float: right}
