--- a/lab12/lab12.html
+++ b/lab12/lab12.html
@@ -17,7 +17,7 @@
 <body>
     <h1>Choose a Walnut</h1>
     <img src="../images/walnut.jpeg" alt="first walnut" onclick="WinnerMessage();">
-    <img src="../images/walnut.jpeg" alt="second walnut">
-    <img src="../images/walnut.jpeg" alt="third walnut">
+    <img src="../images/walnut.jpeg" alt="second walnut" onclick="TryAgain()">
+    <img src="../images/walnut.jpeg" alt="third walnut" onclick="TryAgain()">
 </body>
 </html>
