--- a/project6/home.html
+++ b/project6/home.html
@@ -15,7 +15,7 @@
         .contact{margin: 150px}
         .social-links{float: right; margin: 150px}
         .banner {max-width: 100%}
-        .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
+        .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px;}
     </style>
 </head>
 <body>
