--- a/lab13/lab13submit.html
+++ b/lab13/lab13submit.html
@@ -28,10 +28,10 @@
     </style>
     <script>
         PlanetsOff()
-        function MercuryOn () {
+        /* function MercuryOn () {
             document.getElementById('mercury').style.display = 'block';
             document.getElementById('mercuryinfo').style.display = 'block';
-        }
+        }*/
         function VenusOn () {
             document.getElementById('venus').style.display = 'block';
             document.getElementById('venusinfo').style.display = 'block';
@@ -61,8 +61,6 @@
             document.getElementById('neptuneinfo').style.display = 'block';
         }
         function PlanetsOff () {
-            document.getElementById("mercury").style.display = "none";
-            document.getElementById("mercuryinfo").style.display = "none";
             document.getElementById("venus").style.display = "none";
             document.getElementById("venusinfo").style.display = "none";
             document.getElementById("earth").style.display = "none";
