--- a/lab13/lab13submit.html
+++ b/lab13/lab13submit.html
@@ -28,10 +28,10 @@
     </style>
     <script>
         PlanetsOff()
-        /* function MercuryOn () {
+        function MercuryOn () {
             document.getElementById('mercury').style.display = 'block';
             document.getElementById('mercuryinfo').style.display = 'block';
-        }*/
+        }
         function VenusOn () {
             document.getElementById('venus').style.display = 'block';
             document.getElementById('venusinfo').style.display = 'block';
