--- a/lab13/lab13submit.html
+++ b/lab13/lab13submit.html
@@ -61,6 +61,8 @@
             document.getElementById('neptuneinfo').style.display = 'block';
         }
         function PlanetsOff () {
+            document.getElementById("mercury").style.display = "none";
+            document.getElementById("mercuryinfo").style.display = "none";
             document.getElementById("venus").style.display = "none";
             document.getElementById("venusinfo").style.display = "none";
             document.getElementById("earth").style.display = "none";
