--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <style>
             body {background-color: #00cc00;}
             img {width: 150px;}
@@ -9,10 +10,12 @@
            .row1, .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 20px; margin: 20px;}
            .row2{flex-wrap: wrap;}
             .linkedin, .friends {margin: 80px}
+            h1{font-family: 'Lato', sans-serif;}
         </style>
 
         <title>Contact Info</title>
         <link rel="stylesheet" href="styles.css">
+
     
     </head>
 
