--- a/project6/home.html
+++ b/project6/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="project.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <style>
         .nav {float: right;}
         .heading1 {float: right; display: flex; text-align: right;}
@@ -16,6 +17,7 @@
         .social-links{float: right; margin: 150px}
         .banner {max-width: 100%}
         .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px;}
+        h1{font-family: 'Lato', sans-serif;}
     </style>
 </head>
 <body>
