--- a/project6/technical.html
+++ b/project6/technical.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <title>Technical Projects</title>
     <style>
         .nav {float: right;}
@@ -14,6 +15,7 @@
         .social-links{float: right; margin: 150px}
         .banner{max-width: 100%}
         .twitter{float: right}
+        h1{font-family: 'Lato', sans-serif;}
     </style>
 </head>
 <body>
