--- a/project7/technical.html
+++ b/project7/technical.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="project.css">
     <title>Technical Projects</title>
     <style>
         .nav {float: right;}
@@ -14,6 +16,7 @@
         .social-links{float: right; margin: 150px}
         .banner{max-width: 100%}
         .twitter{float: right}
+        #tern {display: flex; flex-wrap: wrap; width: 50%}
     </style>
 </head>
 <body>
@@ -26,47 +29,35 @@
         </div>
     </nav>
     <h1 style="text-align: center">Technical Projects</h1>
-    <table>
-    <tr><td style="width: 20%; text-align: center"><img src="../project/pictures/twitter.png" alt = "twitter" width="150" height="120"></td>
-    <td style="width: 80%"><h1>Twitter, Inc.</h1><br>
+    <div class="tern"><img src="../project/pictures/twitter.png" alt = "twitter" width="150" height="120"></td>
+    <h1>Twitter, Inc.</h1><br>
     <p>I interned on Twitter’s Source to Pay Team during the summer of 2022. In this role, I learned extensively about strategic sourcing and procurement, and gained a large swath of skills in data analytics and research. Some of the major projects I was assigned included building an email automation system via Google App Script to improve internal system processes and analyzing spend at Twitter’s largest strategic suppliers. At the end of the summer, I presented my findings to Twitter’s CAO. I could not be more grateful for this amazing learning experience!</p><br>
-    </td></tr>
-    </table>
+    </div>
 
-    <table>
-    <tr><td style="width: 20%; text-align: center"><img src="../project/pictures/thursdayboots.png" alt ="thursdayboots" width="200" height="120"></td>
+    <div class="thursdayboots"><img src="../project/pictures/thursdayboots.png" alt ="thursdayboots" width="200" height="120"></td>
     <td style="width: 80%"><h1>Thursday Boots Company Social Media Management</h1><br>
     <p>During the 2021-2022 school year, I was a social media intern for Thursday Boots Company. I helped curate a Twitter and TikTok feed for both the Thursday Boots and Nothing New social media accounts. These accounts had a total of 9,000 followers across platforms. I also assisted the social media manager with influencer relations and customer support.</p><br>
-    </td></tr>
-    </table>
 
-    <table>
-    <tr><td style="width: 20%; text-align: center"><img src="../project/pictures/syracuse.png" alt ="syracuse" width="250" height="50"></td>
+
+    <div class="syracuse"><img src="../project/pictures/syracuse.png" alt ="syracuse" width="250" height="50"></td>
     <td style="width: 80%"><h1>Syracuse University Information & Technology Services</h1><br>
     <p>Over the course of three months, I assisted in Syracuse University’s MySlice upgrade, which is a central portal for all students and staff to access grades, payments, and financial aid statements. Before the upgrade launched, I learned how to use Kaltura, a video cloud platform, to film and edit instructional videos for students and staff to use as they familiarized themselves with the new system. I also wrote and edited blogs related to emerging technologies during my time as a content specialist.</p><br>
-    </td></tr>
-    </table>
+    </div>
 
-    <table>
-    <tr><td style="width: 20%; text-align: center"><img src="../project/pictures/genwealthbuilders.png" alt ="genwealthbuilders" width="250" height="250"></td>
+    <div class="genwealthbuilders"><img src="../project/pictures/genwealthbuilders.png" alt ="genwealthbuilders" width="250" height="250"></td>
     <td style="width: 80%"><h1>Lindley Consulting Group LLC Digital Marketing Internship</h1><br>
     <p>The summer of 2021, I worked as a digital marketing intern for Lindley Consulting Group, LLC. Over the course of six weeks, I assisted creating graphics and growing the organization’s social media presence. I also helped in the early stages of a project called Gen Wealth Builders, which aims to provide financial literacy and professional development tools to women of color. I documented project milestones via Lucidchart and sketched website and app mockups using Figma.</p><br>
-    </td></tr>
-    </table>
+    </div>
 
-    <table>
-    <tr><td style="width: 20%; text-align: center"><img src="../project/pictures/ItemizeBusinessCard.png" alt ="itemize" width="200" height="120"></td>
+    <div class="itemize"><img src="../project/pictures/ItemizeBusinessCard.png" alt ="itemize" width="200" height="120"></td>
     <td style="width: 80%"><h1>Itemize Digital Marketing Project</h1><br>
     <p>During the spring of 2021, I was an intern for Itemize, an insurance technology startup. As an intern, I conducted market research, created visual mockups, communicated with campus organizations to increase our brand visibility.</p><br>
-    </td></tr>
-    </table>
+    </div>
 
-    <table>
-    <tr><td style="width: 20%; text-align: center"><img src="../project/pictures/youthoutreachplan.png" alt ="youthoutreachplan" width="200" height="120"></td>
+    <div class="youthoutreachplan"><img src="../project/pictures/youthoutreachplan.png" alt ="youthoutreachplan" width="200" height="120"></td>
     <td style="width: 80%"><h1>Youth Outreach Plan</h1><br>
     <p>During the summer of 2019, I was an intern for New York State Senator John C. Liu. Working together with my fellow interns, we designed a Youth Outreach Plan to engage young people in the community through social media, events, and merchandise sales. We then used Google Analytics to measure the success of our ideas and pitched our plan to the senator himself.</p><br>
-    </td></tr>
-    </table>    
+    </div> 
 
     <footer>
         <div class="footer">
