--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="project.css">
     <title>Editorial Work</title>
     <style>
         .nav {float: right;}
@@ -12,8 +13,11 @@
         .social-links{float: right; margin-right:10px;}
         .mashed{max-width:100%; display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
         .text1{display: flex; border-radius: 1em; padding: 20px; margin: 20px;}
+        .hercampus{max-width:100%; display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
         .odyssey{max-width:100%; display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
         .editorial{max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
+        .row1{float: left; max-width:100%; display: flex; flex-wrap: wrap;}
+        .row2{max-width:100%; display: flex; flex-wrap: wrap;}
         .text2{display: flex; border-radius: 1em; padding: 20px; margin: 20px;}
         .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
         .letsconnect{float: left; margin: 150px}
@@ -33,20 +37,16 @@
         </nav>
 
         <div class="editorial">
-            <table>
-                <tr>
-                    <td style="width: 33%; text-align: center;"><a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" width="200" height="50"></a></td>
-                    <td style="width: 33%; text-align: center;"><a href="https://www.hercampus.com/author/taylor-huang/"><img src="../project/pictures/hercampusmedia.png" alt ="hercampus" width="500" height="250"></a></td>
-                    <td style="width: 33%; text-align: center;"><a href="https://www.theodysseyonline.com/user/@taylor_huang"><img src="../project/pictures/odyssey.png" alt ="odyssey" width="150" height="150"></a></td>
-                </tr>
-                <tr>
-                    <td><p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p></td>
-                    <td><p>I was previously an intern for Her Campus Media, where I worked extensively on Lifestyle and Wellness articles. I also led the publications “Behind the Feed” series for a period, where I organized social media influencers stories.</p></td>
-                    <td><p>During the summer of 2020, I was a Lifestyle Beat Creator for the Odyssey Online. I worked closely with the Lifestyle Editor to create engaging, informative written content for audiences. At the end of this program, I generated upwards of 220,000 views on my content, which consisted of product reviews, listicles, and food items.</p></td>
-                </tr>
-        </table>
+            <div class="row1">
+            <a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" width="200" height="50"></a>
+            <a href="https://www.hercampus.com/author/taylor-huang/"><img src="../project/pictures/hercampusmedia.png" alt ="hercampus" width="500" height="250"></a>
+            <a href="https://www.theodysseyonline.com/user/@taylor_huang"><img src="../project/pictures/odyssey.png" alt ="odyssey" width="150" height="150"></a></div>
+        <div class="row2">
+                    <p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p>
+                    <p>I was previously an intern for Her Campus Media, where I worked extensively on Lifestyle and Wellness articles. I also led the publications “Behind the Feed” series for a period, where I organized social media influencers stories.</p>
+                    <p>During the summer of 2020, I was a Lifestyle Beat Creator for the Odyssey Online. I worked closely with the Lifestyle Editor to create engaging, informative written content for audiences. At the end of this program, I generated upwards of 220,000 views on my content, which consisted of product reviews, listicles, and food items.</p>
+                </div>
         </div>
-
 
         <footer>
             <div class="footer">
