--- a/project7/home.html
+++ b/project7/home.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
     <title>Home</title>
     <link rel="stylesheet" href="project.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <style>
         .nav {float: right;}
         .heading1 {float: right; display: flex; text-align: right;}
-       .paragraph {float: right; display: flex; text-align: right;}
+       /* .paragraph {float: right; display: flex; text-align: right;}*/
         .footer{max-width:100%; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
-        .letsconnect{float: left; margin: 150px}
-        .contact{margin: 150px}
-        .social-links{float: right; margin: 150px}
-        .banner {max-width: 100%}
+        .letsconnect{text-align: left; margin: 150px}
+        .contact{text-align: center; margin: 150px;}
+        .social-links{text-align: right; margin: 150px;}
+        .banner {max-width: 100%;}
         .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px;}
+        .name {text-align: right;}
+        .paragraph {text-align: right;}
+        h1, .blurb{font-family: 'Lato', sans-serif;}
     </style>
 </head>
 <body>
@@ -28,44 +33,32 @@
     </div>
     </nav>
     <div class ="blurb">
-        <!-- <table>
-        <tr>
-        <td style="width: 70%"><header><img class="banner" src="../images/banner.png" alt ="banner"></header></td>-->
-    <div class="row2">
-    <!-- <td style="padding: 30px">  -->
-            <div class="heading1"><h1>Hi, I'm Taylor.</h1><br>
-        <div class="paragraph">
+        <img class="banner" src="../images/banner.png" alt ="banner" width="600" height="240">
+    <!-- <div class="row2"> -->
+    <div class="name"><h1 style="text-align: right">Hi, I'm Taylor.</h1><br>
+            <!-- <div class="paragraph">-->
         In May 2023, I will be earning a dual degree from Syracuse University’s School of Information Studies and S.I. Newhouse School of Public Communications. I am studying information management and technology and magazine journalism, and my education helped shape me into a digital storyteller. I hope to apply both my technical and writing skills to opportunities that will make technology more accessible and digestible for diverse audiences. <br>
         Outside of my work I am a huge foodie and traveler, and I love staying active. Feel free to contact me at <a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com.</a>
-    </div></td>
     </div>
-    </tr>
-    </table>
+     <!-- </div> -->
     </div>
     <footer>
         <div class="footer">
-        <table style="margin-left:auto;margin-right:auto">
-            <tr>
-                <td style="width: 33%; padding: 00px">
-   <div class="letsconnect">
-
-        <h2>Let's Connect!</h2></td>
-</div>
-<div class="contact">
-        <td style="width: 33%; padding: 25px">
+        <div class="letsconnect">
+        <h2>Let's Connect!</h2>
+        </div>
+        <div class="contact">
                 <p><a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com</a><br>
                 718-913-0894<br>
-            </td>
-<div class="social-links">
-              <!-- <td style="width: 33%; padding: 25px">-->
+                </div>
+        <div class="social-links">
             <a href="https://www.linkedin.com/in/taylorjhuang/"><img src="../images/LI-In-Bug.png" alt ="linkedin" width="60" height="50"></a>
             <a href="https://twitter.com/taylorjhuang"><img src="../project/pictures/twitter.png" alt ="twitter" width="60" height="50"></a>
-            <!-- </td>
-        </tr>-->
+            </div> 
             </div>
-        </div>
     
         </footer>
-
 </body>
 </html>
+
+
