--- a/project7/technical.html
+++ b/project7/technical.html
@@ -16,7 +16,7 @@
         .social-links{float: right; margin: 150px}
         .banner{max-width: 100%}
         .twitter{float: right}
-        #tern {display: flex; flex-wrap: wrap; width: 50%}
+        .jobs {display: flex; flex-wrap: wrap}
     </style>
 </head>
 <body>
@@ -29,6 +29,7 @@
         </div>
     </nav>
     <h1 style="text-align: center">Technical Projects</h1>
+    <div class="jobs">
     <div class="tern"><img src="../project/pictures/twitter.png" alt = "twitter" width="150" height="120"></td>
     <h1>Twitter, Inc.</h1><br>
     <p>I interned on Twitter’s Source to Pay Team during the summer of 2022. In this role, I learned extensively about strategic sourcing and procurement, and gained a large swath of skills in data analytics and research. Some of the major projects I was assigned included building an email automation system via Google App Script to improve internal system processes and analyzing spend at Twitter’s largest strategic suppliers. At the end of the summer, I presented my findings to Twitter’s CAO. I could not be more grateful for this amazing learning experience!</p><br>
@@ -58,6 +59,7 @@
     <td style="width: 80%"><h1>Youth Outreach Plan</h1><br>
     <p>During the summer of 2019, I was an intern for New York State Senator John C. Liu. Working together with my fellow interns, we designed a Youth Outreach Plan to engage young people in the community through social media, events, and merchandise sales. We then used Google Analytics to measure the success of our ideas and pitched our plan to the senator himself.</p><br>
     </div> 
+    </div>
 
     <footer>
         <div class="footer">
