--- a/project7/home.html
+++ b/project7/home.html
@@ -12,7 +12,7 @@
         .nav {float: right;}
         .heading1 {float: right; display: flex; text-align: right;}
        /* .paragraph {float: right; display: flex; text-align: right;}*/
-        .footer{max-width:100%; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
+        .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
         .letsconnect{text-align: left; margin: 150px}
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
@@ -42,6 +42,7 @@
     </div>
      <!-- </div> -->
     </div>
+
     <footer>
         <div class="footer">
         <div class="letsconnect">
