--- a/project7/home.html
+++ b/project7/home.html
@@ -12,15 +12,25 @@
         .nav {float: right;}
         .heading1 {float: right; display: flex; text-align: right;}
        /* .paragraph {float: right; display: flex; text-align: right;}*/
-        .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
+       .end{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; float: center; flex-wrap: wrap;}
         .letsconnect{text-align: left; margin: 150px}
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
         .banner {max-width: 100%;}
         .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px;}
-        .name {text-align: right;}
+        .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
         h1, .blurb{font-family: 'Lato', sans-serif;}
+
+        @media only screen and (max-width: 600px) 
+    { 
+        .nav a{max-width:100%; display: flex; float: center; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
+        span {display: none;}
+        img a{max-width: 100%;}
+        .blurb{text-align: right; flex-wrap: wrap;}
+        .name {text-align: right; flex-wrap: wrap;}
+        .end{max-width:100%; display: flex; float: center; flex-wrap: wrap;}
+    }
     </style>
 </head>
 <body>
@@ -33,7 +43,7 @@
     </div>
     </nav>
     <div class ="blurb">
-        <img class="banner" src="../images/banner.png" alt ="banner" width="600" height="240">
+        <img class="banner" src="../images/banner.png" alt ="banner">
     <!-- <div class="row2"> -->
     <div class="name"><h1 style="text-align: right">Hi, I'm Taylor.</h1><br>
             <!-- <div class="paragraph">-->
@@ -44,7 +54,7 @@
     </div>
 
     <footer>
-        <div class="footer">
+        <div class="end">
         <div class="letsconnect">
         <h2>Let's Connect!</h2>
         </div>
