--- a/project7/home.html
+++ b/project7/home.html
@@ -22,13 +22,14 @@
         .paragraph {text-align: right;}
         h1, .blurb{font-family: 'Lato', sans-serif;}
 
-        @media only screen and (max-width: 600px) 
+        @media only screen and (max-width: 1250px) 
     { 
         .nav a{max-width:100%; display: flex; float: center; background-color: aliceblue; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; }
+        .name{text-align: right; flex-wrap: wrap;}
         span {display: none;}
         img a{max-width: 100%;}
         .blurb{text-align: right; flex-wrap: wrap;}
-        .name {text-align: right; flex-wrap: wrap;}
+        .name {max-width:100%; float: center; display: flex; flex-wrap: wrap;}
         .end{max-width:100%; display: flex; float: center; flex-wrap: wrap;}
     }
     </style>
