--- a/project7/home.html
+++ b/project7/home.html
@@ -17,7 +17,7 @@
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
         .banner {max-width: 100%;}
-        .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px;}
+        .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 150px; flex: 1;}
         .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
         h1, .blurb{font-family: 'Lato', sans-serif;}
