--- a/project7/technical.html
+++ b/project7/technical.html
@@ -40,10 +40,10 @@
     <h1 style="text-align: center">Technical Projects</h1>
     <div class="jobs">
     <div class="tern">
-    <img src="../project/pictures/twitter.png" alt = "twitter" width="150" height="120">
-    <h1>Twitter, Inc.</h1><br>
-    <p>I interned on Twitter’s Source to Pay Team during the summer of 2022. In this role, I learned extensively about strategic sourcing and procurement, and gained a large swath of skills in data analytics and research. Some of the major projects I was assigned included building an email automation system via Google App Script to improve internal system processes and analyzing spend at Twitter’s largest strategic suppliers. At the end of the summer, I presented my findings to Twitter’s CAO. I could not be more grateful for this amazing learning experience!</p><br>
-    </div>
+    <section><img src="../project/pictures/twitter.png" alt = "twitter" width="150" height="120">
+    <h1>Twitter, Inc.</h1></section>
+    <aside><p>I interned on Twitter’s Source to Pay Team during the summer of 2022. In this role, I learned extensively about strategic sourcing and procurement, and gained a large swath of skills in data analytics and research. Some of the major projects I was assigned included building an email automation system via Google App Script to improve internal system processes and analyzing spend at Twitter’s largest strategic suppliers. At the end of the summer, I presented my findings to Twitter’s CAO. I could not be more grateful for this amazing learning experience!</p><br>
+    </aside></div>
 
     <div class="thursdayboots"><img src="../project/pictures/thursdayboots.png" alt ="thursdayboots" width="200" height="120">
     <h1>Thursday Boots Company Social Media Management</h1><br>
