--- a/project7/home.html
+++ b/project7/home.html
@@ -17,7 +17,7 @@
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
         .banner {max-width: 100%;}
-        .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 150px; flex: 1;}
+        .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 80px; flex: 1;}
         .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
         h1, .blurb{font-family: 'Lato', sans-serif;}
@@ -28,7 +28,7 @@
         .name{text-align: right; flex-wrap: wrap;}
         span {display: none;}
         img a{max-width: 100%;}
-        .blurb{text-align: right; flex-wrap: wrap;}
+        .blurb{text-align: right; flex-wrap: wrap; padding: 80px;}
         .name {max-width:100%; float: center; display: flex; flex-wrap: wrap;}
         .end{max-width:100%; display: flex; float: center; flex-wrap: wrap;}
     }
