--- a/project7/editorial.html
+++ b/project7/editorial.html
@@ -11,11 +11,11 @@
         .nav {float: right;}
         .heading1{display: flex; text-align: left; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
         .social-links{float: right; margin-right:10px;}
-        .mashed{max-width:100%; display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px; float: left; margin: 150px; flex-wrap: wrap;}
+        .mashed{max-width:100%; display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; float: left; margin: 150px; flex-wrap: wrap;}
         .text1{display: flex; border-radius: 1em; padding: 20px; margin: 20px;}
-        .hercampus{max-width:100%; display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px; text-align: center; margin: 150px; flex-wrap: wrap;}
-        .odyssey{max-width:100%; display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px; float: right; margin: 150px; flex-wrap: wrap;}
-        .editorial{max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px; flex-wrap: wrap}
+        .hercampus{max-width:100%; display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 150px; flex-wrap: wrap;}
+        .odyssey{max-width:100%; display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; float: right; margin: 150px; flex-wrap: wrap;}
+        .editorial{max-width:100%; flex-wrap: wrap; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: auto; flex-wrap: wrap}
         .row1{float: left; max-width:100%; display: flex; flex-wrap: wrap;}
         .row2{max-width:100%; display: flex; flex-wrap: wrap;}
         .text2{display: flex; border-radius: 1em; padding: 20px; margin: 20px;}
