--- a/project6/home.html
+++ b/project6/home.html
@@ -17,12 +17,12 @@
         .social-links{float: right; margin: 150px}
         .banner {max-width: 100%}
         .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px;}
-        h1{font-family: 'Lato', sans-serif;}
+        h1, .footer{font-family: 'Lato', sans-serif;}
     </style>
 </head>
 <body>
     <nav>
-    <img class="logo" src="../project/pictures/huangtaylorlogo.png" alt ="logo">
+    <img class="logo" src="../project/pictures/favicon.project.ico" alt ="logo">
     <div class="nav">
         <a href="home.html">Home</a> <span>|</span>
         <a href="editorial.html">Editorial Work</a> <span>|</span>
