--- a/project7/technical.html
+++ b/project7/technical.html
@@ -19,7 +19,7 @@
         .jobs {display: flex; flex-wrap: wrap}
         /*.tern {display: flex; flex-wrap: wrap}*/
         .jobs {display: inline-grid; column-gap: 80px; grid-template-columns: 250px auto;}
-        .grid-item {padding: 20px;font-size: 15px; text-align: center;}
+        .grid-item {padding: 20px;font-size: 20px; text-align: center; float: center;}
         .jobs {font-family: 'Lato', sans-serif;}
 
         @media only screen and (max-width: 600px) 
@@ -35,7 +35,7 @@
 </head>
 <body>
     <nav>
-    <img class="logo" src="../project/pictures/huangtaylorlogo.png" alt ="logo">
+    <a href="home.html"><img src="../project/pictures/favicon.project.ico" alt ="logo"></a>
     <div class="nav">
         <a href="home.html">Home</a> <span>|</span>
         <a href="editorial.html">Editorial Work</a> <span>|</span>
