--- a/project7/home.html
+++ b/project7/home.html
@@ -17,10 +17,11 @@
         .contact{text-align: center; margin: 150px;}
         .social-links{text-align: right; margin: 150px;}
         .banner {max-width: 100%;}
-        .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 80px; flex: 1;}
+        .blurb {display: inline-grid; grid-template-columns: 50% 50%}
+        .grid-item {padding: 20px;font-size: 15px; text-align: center;}
         .name {text-align: right; flex-wrap: wrap;}
         .paragraph {text-align: right;}
-        h1, .blurb{font-family: 'Lato', sans-serif;}
+        h1, .blurb, .end{font-family: 'Lato', sans-serif;}
 
         @media only screen and (max-width: 1250px) 
     { 
@@ -36,7 +37,7 @@
 </head>
 <body>
     <nav>
-    <img class="logo" src="../project/pictures/huangtaylorlogo.png" alt ="logo">
+    <a href="home.html"><img src="../project/pictures/favicon.project.ico" alt ="logo"></a>
     <div class="nav">
         <a href="home.html">Home</a> <span>|</span>
         <a href="editorial.html">Editorial Work</a> <span>|</span>
@@ -44,12 +45,14 @@
     </div>
     </nav>
     <div class ="blurb">
-        <img class="banner" src="../images/banner.png" alt ="banner">
+        <div class = "grid-item">
+        <img class="banner" src="../images/banner.png" alt ="banner"></div>
     <!-- <div class="row2"> -->
-    <div class="name"><aside><h1 style="text-align: right">Hi, I'm Taylor.</h1><br>
+        <div class = "grid-item"><div class="name"><aside><h1 style="text-align: right">Hi, I'm Taylor.</h1><br>
             <!-- <div class="paragraph">-->
         In May 2023, I will be earning a dual degree from Syracuse University’s School of Information Studies and S.I. Newhouse School of Public Communications. I am studying information management and technology and magazine journalism, and my education helped shape me into a digital storyteller. I hope to apply both my technical and writing skills to opportunities that will make technology more accessible and digestible for diverse audiences. <br>
         Outside of my work I am a huge foodie and traveler, and I love staying active. Feel free to contact me at <a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com.</a></aside>
+            </div>
     </div>
      <!-- </div> -->
     </div>
